fix: fix command an error of installing dependencies.

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -27,7 +27,7 @@ jobs:
           node-version: 20
       
       - name: Install Dependencies
-        run: npm install
+        run: npm install --force
       
       - name: Package and Make for Windows
         if: github.event.inputs.platform == 'windows-latest'
