--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
           node-version: 20
       
       - name: Install Dependencies
-        run: npm install
+        run: npm install --force
       
       - name: Package and Make for Windows
         if: matrix.os == 'windows-latest'
