--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,21 +18,21 @@ jobs:
     steps:
       - name: Check out Git repository
         uses: actions/checkout@v4
-      
+
       - name: Install Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
-      
+
       - name: Install Dependencies
         run: npm install --force
-      
+
       - name: Package and Make for Windows
         if: matrix.os == 'windows-latest'
         run: npm run make:win
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
+
       - name: Package and Make for macOS
         if: matrix.os == 'macos-latest'
         run: npm run make:darwin
@@ -43,7 +43,7 @@ jobs:
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
-      
+
       - name: Upload Windows Artifacts
         if: matrix.os == 'windows-latest'
         uses: actions/upload-artifact@v4
@@ -53,7 +53,7 @@ jobs:
             out/make/**/*.exe
             out/make/**/*.msi
           if-no-files-found: error
-      
+
       - name: Upload macOS Artifacts
         if: matrix.os == 'macos-latest'
         uses: actions/upload-artifact@v4
@@ -64,36 +64,36 @@ jobs:
             out/make/**/*.zip
           if-no-files-found: error
   
-#  publish-release:
-#    needs: release
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - name: Check out Git repository
-#        uses: actions/checkout@v4
-#
-#      - name: Download Windows Artifacts
-#        uses: actions/download-artifact@v4
-#        with:
-#          name: windows-artifacts
-#          path: artifacts/windows
-#
-#      - name: Download macOS Artifacts
-#        uses: actions/download-artifact@v4
-#        with:
-#          name: macos-artifacts
-#          path: artifacts/macos
-#
-#      - name: Create Release
-#        uses: softprops/action-gh-release@v1
-#        with:
-#          files: |
-#            artifacts/**/*.exe
-#            artifacts/**/*.msi
-#            artifacts/**/*.dmg
-#            artifacts/**/*.zip
-#          draft: true
-#          prerelease: false
-#          generate_release_notes: true
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  publish-release:
+    needs: release
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out Git repository
+        uses: actions/checkout@v4
+
+      - name: Download Windows Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: windows-artifacts
+          path: artifacts/windows
+
+      - name: Download macOS Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: macos-artifacts
+          path: artifacts/macos
+
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            artifacts/**/*.exe
+            artifacts/**/*.msi
+            artifacts/**/*.dmg
+            artifacts/**/*.zip
+          draft: true
+          prerelease: false
+          generate_release_notes: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
