--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,8 +87,7 @@ jobs:
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
-          files: |
-            artifacts/**/*.zip
+          files: artifacts/**/*.zip
           draft: true
           prerelease: false
           generate_release_notes: true
