--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -52,3 +52,35 @@ jobs:
             out/make/**/*.dmg
             out/make/**/*.zip
           if-no-files-found: error
+  
+  publish-release:
+    needs: test-build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out Git repository
+        uses: actions/checkout@v4
+
+      - name: Download Windows Artifacts
+        if: github.event.inputs.platform == 'windows-latest'
+        uses: actions/download-artifact@v4
+        with:
+          name: windows-artifacts
+          path: artifacts/windows
+
+      - name: Download macOS Artifacts
+        if: github.event.inputs.platform == 'macos-latest'
+        uses: actions/download-artifact@v4
+        with:
+          name: macos-artifacts
+          path: artifacts/macos
+
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: artifacts/**/*.zip
+          draft: true
+          prerelease: false
+          generate_release_notes: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
